--- a/carsharing/build.gradle
+++ b/carsharing/build.gradle
@@ -19,6 +19,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
+    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
+
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
