--- a/carsharing/build.gradle
+++ b/carsharing/build.gradle
@@ -20,9 +20,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    //implementation 'org.springframework.security:spring-security-crypto:6.1.5'
+    implementation 'org.springframework.security:spring-security-crypto:6.1.5'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
