--- a/carsharing/build.gradle
+++ b/carsharing/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'jacoco'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -19,16 +20,33 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
-
-    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
-
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation 'org.springframework.security:spring-security-crypto:6.1.5'
+    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'  // Use the latest stable version
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'  // Ensure this version is compatible with JUnit Jupiter version
+    // ... other dependencies ...
 }
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
+    ignoreFailures = true
+    finalizedBy 'jacocoTestReport'
+}
+
+jacocoTestReport {
+    reports {
+        xml.required.set(true)
+        csv.required.set(false)
+        html.required.set(true)
+    }
 }
