--- a/carsharing/build.gradle
+++ b/carsharing/build.gradle
@@ -29,9 +29,9 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'  // Use the latest stable version
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'  // Ensure this version is compatible with JUnit Jupiter version
+    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
     // ... other dependencies ...
 }
 
