--- a/carsharing/build.gradle
+++ b/carsharing/build.gradle
@@ -25,20 +25,21 @@ dependencies {
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.0'
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
 
-tasks.named('bootRun') {    // Запускаємо тести перед запуском додатку
-    dependsOn 'test'}
-tasks.named('test') {
-    // Після виконання тестів генеруємо звіт JaCoCo    finalizedBy 'jacocoTestReport'
+tasks.named('bootRun') {
+    dependsOn 'test'
 }
 
+
+test {
+    useJUnitPlatform()
+    finalizedBy 'jacocoTestReport'
+}
 jacocoTestReport {
     reports {
         xml.required.set(true)
